--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ th{
 
 	<nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
-  	  <img src="/Logo.png" height="50" class="d-inline-block align-top" alt="Badla">
+  	  <img src="./Logo.png" height="50" class="d-inline-block align-top" alt="Badla">
 
   </a>
  
